--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -10,6 +10,7 @@
 @import './ui-text/ui-text.css';
 @import './ui-textarea/ui-textarea.css';
 @import './ui-label/ui-label.css';
+@import './ui-select/ui-select.css';
 
 
 
