--- a/ui/ui-checkbox/ui-checkbox.css
+++ b/ui/ui-checkbox/ui-checkbox.css
@@ -20,35 +20,24 @@ ui-checkbox[animated]{
   transition-duration:var(--ui-transition-duration);
   transition-property:background-color,color;}
 
-ui-checkbox[shape="rounded"],
-ui-checkbox[shape="rounded"]::before,
-ui-checkbox[shape="rounded"] > ui-icon{
-  border-radius:calc(var(--ui-object-height) / 4);}
-
-ui-checkbox[shape="circle"],
-ui-checkbox[shape="circle"]::before,
-ui-checkbox[shape="circle"] > ui-icon{
-  border-radius:var(--ui-border-radius-circle);}
-
-ui-checkbox[shape="square"],
-ui-checkbox[shape="square"]::before,
-ui-checkbox[shape="square"] > ui-icon{
-  border-radius:none;}
-
 ui-checkbox::before{
   content:'';
   position:absolute;
   inset:0;
+  border-radius:inherit;
   border-width:2px;
   border-style:solid;
-  border-color:rgb(70,70,70);}
+  border-color:rgb(70,70,70);
+  overflow:hidden;}
 
 ui-checkbox:focus-visible:not([disabled]){
   outline-color:rgb(100,100,100);}
 
 ui-checkbox > ui-icon{
   position:absolute;
-  padding:calc(var(--ui-object-height) / 10);}
+  padding:calc(var(--ui-object-height) / 10);
+  border-radius:inherit;
+  overflow:hidden;}
 
 ui-checkbox[checked] > ui-icon{
   background-color:rgb(25,125,230);
