--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -11,6 +11,7 @@
 @import './ui-textarea/ui-textarea.css';
 @import './ui-label/ui-label.css';
 @import './ui-select/ui-select.css';
+@import './ui-listbox/ui-listbox.css';
 
 
 
