--- a/ui/ui-select/ui-select.css
+++ b/ui/ui-select/ui-select.css
@@ -44,3 +44,7 @@ ui-select > span{
 
 ui-select > ui-icon{
   width:18px;}
+
+ui-listbox[type="select"]{
+  font-size:var(--ui-font-size-small);
+    color:rgb(175,175,175);}
