--- a/theme/theme.css
+++ b/theme/theme.css
@@ -47,6 +47,9 @@ body{
   background-color:var(--ui-color-black);
   overflow-y:scroll;}
 
+*::-webkit-scrollbar-track{
+  background:transparent;}
+
 ::-webkit-scrollbar-thumb,
 ::-webkit-scrollbar-track{
   cursor:default!important;}
