--- a/theme/theme.css
+++ b/theme/theme.css
@@ -51,7 +51,7 @@ body{
 
 ::-webkit-scrollbar-thumb{
   border-radius:var(--ui-border-radius-pill);
-  background-color:var(--ui-color-gray);}
+  background-color:var(--ui-color-scrollbar);}
 
 ::-webkit-scrollbar-track{
   background-color:transparent;}
@@ -59,13 +59,12 @@ body{
 ::-webkit-scrollbar-button{
   display:none;}
 
-
 #app{
   position:relative;
   display:flex;
   width:1600px;
   max-width:100%;
-  margin: auto;}
+  margin:auto;}
 
 nav{
   position:relative;
@@ -174,13 +173,14 @@ article{
   row-gap:10px;}
 
 .content-item > .example{
-  border:1px solid rgb(25,25,25);
-  border-radius:var(--ui-border-radius-default);
-}
+  overflow:hidden;
+  border:1px solid var(--ui-color-gray-25);
+  border-radius:var(--ui-border-radius-default);}
 
 .content-item > .example > .preview,
 .content-item > .example > .code,
 .content-item > .example > .toolbar{
+  position:relative;
   max-width:100%;}
 
 .content-item > .example > .preview{
@@ -191,19 +191,22 @@ article{
 
 .content-item > .example > .preview,
 .content-item > .example > .code{
-  padding:15px;}
+  padding:25px 15px;}
 
 .content-item > .example > .code{
   line-height:1.5;
-  background-color:rgb(10,10,10);}
+  background-color:var(--ui-color-gray-15);}
 
 .content-item > .example > .preview,
 .content-item > .example > .toolbar{
-  border-bottom:1px solid rgb(25,25,25);}
+  border-bottom:1px solid var(--ui-color-gray-25);}
 
 .content-item > .example > .toolbar{
   display:flex;
-  padding:5px;}
+  padding:10px 15px;
+  font-size:var(--ui-font-size-small);
+  gap:10px;}
+
 
 
 /* icons */
